<resources>
    <string name="app_name">PUCMap</string>
    <string name="title_activity_maps">PUCMap</string>
    <string name="get_me_home">Get Me Home</string>
    <string name="get_me_to_work">Get Me to Work</string>
    <string name="bike_button">Bike button</string>
    <string name="directions_bus_button">Directions bus button</string>
    <string name="local_parking_button">Local parking button</string>
    <string name="directions_boat_button">Directions boat button</string>
    <string name="edit_icon">Edit icon</string>
    <string name="more_icon">More icon</string>
    <string name="work_icon">Work icon</string>
    <string name="home_icon">Home icon</string>
    <string name="local_taxi_button">Local taxi button</string>
    <string name="search_icon">Search icon</string>
    <string name="arena">Arena</string>
    <string name="gps">gps</string>
    <string name="get_me_somewhere">Get Me Somewhere</string>
    <string name="bike">Bike</string>
    <string name="boat_lines">Boat lines</string>
    <string name="pula_zadar">Pula-Zadar</string>
    <string name="_07_00">07:00</string>
    <string name="pula_brijuni">Pula-Brijuni</string>

    <string name="_12_00">12:00</string>
    <string name="pula_fratarski">Pula-Fratarski</string>
    <string name="odisej">Odisej</string>
    <string name="_09_00">09:00</string>
    <string name="pula_venecija">Pula-Venecija</string>
    <string name="katamaran">Katamaran</string>
    <string name="_07_30">07:30</string>
    <string name="parking">Parking</string>
    <string name="_1_zone">1. ZONE</string>
    <string name="_2_zone">2. ZONE</string>
    <string name="_3_zone">3. ZONE</string>
    <string name="slots">SLOTS</string>
    <string name="sms_parking">SMS PARKING</string>
    <string name="taxi">Taxi</string>
    <string name="taxi_pula">Taxi Pula</string>
    <string name="_385_52_313_313">+385 (52) 313 313</string>
    <string name="po_etna_cijena">Početna cijena</string>
    <string name="_6_kn">6 kn</string>
    <string name="cijena_po_km">Cijena po km</string>
    <string name="_10_kn">10 kn</string>
    <string name="taxi_cammeo">Taxi Cammeo</string>
    <string name="naru_i_pozivom">Naruči pozivom</string>
    <string name="eko_taxi">Eko Taxi</string>
    <string name="bus_lines">Bus Lines</string>
    <string name="_1">1</string>
    <string name="bus_kolodvor_stoja">BUS KOLODVOR - STOJA</string>
    <string name="stoja_bus_kolodvor">STOJA - BUS KOLODVOR</string>
    <string name="bus_kolodvor_veruda_verudela">BUS KOLODVOR - VERUDA - VERUDELA</string>

    <string name="_2a">2a</string>
    <string name="ijanska_uma_vidikovac_verudela">ŠIJANSKA ŠUMA - VIDIKOVAC - VERUDELA</string>
    <string name="direction_b">Direction B</string>
    <string name="verudela_veruda_bus_kolodvor">VERUDELA - VERUDA - BUS KOLODVOR</string>
    <string name="_1_zona">1. ZONA</string>
    <string name="_2_zona">2. ZONA</string>
    <string name="_3_zona">3. ZONA</string>
    <string name="sms_parking_22">SMS Parking</string>
    <string name="po_aljite_registraciju_na_broj_708522">Pošaljite registraciju na broj 708522</string>
    <string name="po_aljite_registraciju_na_broj_708521">Pošaljite registraciju na broj 708521</string>
    <string name="po_aljite_registraciju_na_broj_708523">Pošaljite registraciju na broj 708523</string>
    <string name="_1_zonee">1 ZONE</string>
    <string name="cijena_parkinga_1h">Cijena parkinga (1h)</string>
    <string name="_4_kn">4 kn</string>
    <string name="naknada_za_parkiranje">Naknada za parkiranje na javnim parkiralištima ne naplaćuje se nedjeljom i blagdanom, osim po nalogu direktora.</string>
    <string name="naplata_od">Naplata od:</string>
    <string name="_01_01_31_05_07_00_20_00_sati">01.01.- 31.05. 07.00 - 20.00 sati</string>
    <string name="_01_06_30_09_07_00_22_00_sata">01.06. - 30.09. 07.00 - 22.00 sata</string>
    <string name="_01_10_31_12_07_00_20_00_sati">01.10. - 31.12. 07.00 - 20.00 sati</string>
    <string name="day_pay">DNEVNA KARTA 130,00 kn</string>
    <string name="reg_number_call">Pošaljite registraciju na broj 708521</string>
    <string name="_2_zoneee">2 ZONE</string>
    <string name="day_pay2">DNEVNA KARTA 100,00 kn</string>
    <string name="reg_number_call2">Pošaljite registraciju na broj 708522</string>
    <string name="_3_zoneee">3 ZONE</string>
    <string name="_15_kn">15 kn</string>
    <string name="day_pay3">DNEVNA KARTA 160,00 kn</string>
    <string name="reg_n_call3">Pošaljite registraciju na broj 708523</string>
    <string name="slotss">Slots</string>
    <string name="set_home">Set Home</string>
    <string name="use_current_location">Use current location</string>
    <string name="stoja_bus_station">BUS STATION - STOJA</string>
    <string name="direction_a_btn1">Direction A</string>
    <string name="direction_b_BTN1">Direction B</string>
    <string name="direction_a">Direction A</string>
    <string name="first_station">FIRST STATION</string>
    <string name="details">DETAILS</string>
    <string name="direction_to_the_nearest_station">DIRECTION TO THE NEAREST STATION</string>
    <string name="_time1">05</string>
    <string name="time101">05</string>
    <string name="time102">35</string>
    <string name="time2">06</string>
    <string name="time201">25</string>
    <string name="time202">45</string>
    <string name="time3">07</string>
    <string name="time5">08</string>
    <string name="time6">09</string>
    <string name="time8">10</string>
    <string name="time9">11</string>
    <string name="time10">12</string>
    <string name="time11">13</string>
    <string name="time12">14</string>
    <string name="time13">15</string>
    <string name="time14">16</string>
    <string name="time15">17</string>
    <string name="time16">18</string>
    <string name="time18">19</string>
    <string name="time19">20</string>
    <string name="time20">21</string>
    <string name="time22">35</string>
    <string name="time23">22</string>
    <string name="time24">23</string>
    <string name="time25">00</string>
    <string name="stoja_bus_stati">STOJA - BUS STATION</string>
    <string name="_30">30</string>
    <string name="_00">00</string>
    <string name="_50">50</string>
    <string name="_10">10</string>
    <string name="bus_station_veruda_verudela">BUS STATION - VERUDA - VERUDELA</string>
    <string name="verudela_vidikovac_ijanska_uma">VERUDELA - VIDIKOVAC - ŠIJANSKA ŠUMA</string>
    <string name="pu_zd">Pula - Zadar</string>
    <string name="puLA">Pula</string>
    <string name="polazak">Polazak</string>
    <string name="_7_00">7:00</string>
    <string name="unije">Unije</string>
    <string name="_8_35">8:35</string>
    <string name="_8_40">8:40</string>
    <string name="susak">Susak</string>
    <string name="_9_15">9:15</string>
    <string name="_9_20">9:20</string>
    <string name="dolazak">Dolazak</string>
    <string name="dolaz">Dolazak</string>
    <string name="silba">Silba</string>
    <string name="mali_lo_inj">Mali Lošinj</string>
    <string name="zadar_pula">Zadar - Pula</string>
    <string name="zadar">Zadar</string>
    <string name="ilovik">Ilovik</string>
    <string name="pula_brijunii">Pula - Brijuni</string>
    <string name="korkyra">Korkyra</string>
    <string name="brijuni_pula">Brijuni - Pula</string>
    <string name="pula_ve">Pula - Venecija</string>
    <string name="s_30">7:30</string>
    <string name="_11_15">11:15</string>
    <string name="ven_pula">Venecija - Pula</string>
    <string name="aaavenecija">Venecija</string>
    <string name="_17_15">17:15</string>
    <string name="_20_30">20:30</string>
    <string name="bunarina_otko_veruda">Bunarina - Otok Veruda</string>
    <string name="pula_frat">Pula - Fratarski</string>
    <string name="_9_00">9:00</string>
    <string name="_9_10">9:10</string>
    <string name="_10_10">10:10</string>
    <string name="_11_00">11:00</string>
    <string name="_11_10">11:10</string>
    <string name="_12_10">12:10</string>

    <string name="_13_00">13:00</string>
    <string name="_13_10">13:10</string>
    <string name="time2222">14:00</string>
    <string name="_14_10">14:10</string>
    <string name="_15_00">15:00</string>
    <string name="_15_10">15:10</string>
    <string name="_16_00">16:00</string>
    <string name="_16_10">16:10</string>
    <string name="_17_00">17:00</string>
    <string name="_17_10">17:10</string>
    <string name="_18_00">18:00</string>
    <string name="_18_10">18:10</string>
    <string name="_19_00">19:00</string>
    <string name="_19_10">19:10</string>
    <string name="_20_00">20:00</string>
    <string name="_20_10">20:10</string>

    <string name="_10_00">10:00</string>
    <string name="_21_00">21:00</string>
    <string name="fratarski_pula">Fratarski - Pula</string>
    <string name="otok_veruda_bunarina">Otok Veruda - Bunarina</string>

    <string name="_9_25">9:25</string>
    <string name="_10_15">10:15</string>
    <string name="_10_25">10:25</string>

    <string name="_11_25">11:25</string>
    <string name="_12_15">12:15</string>
    <string name="_12_25">12:25</string>
    <string name="_13_15">13:15</string>
    <string name="_13_25">13:25</string>
    <string name="_14_15">14:15</string>
    <string name="_14_25">14:25</string>
    <string name="_15_15">15:15</string>
    <string name="_15_25">15:25</string>
    <string name="_16_15">16:15</string>
    <string name="_16_25">16:25</string>

    <string name="_17_25">17:25</string>
    <string name="_18_15">18:15</string>
    <string name="_18_25">18:25</string>
    <string name="_19_15">19:15</string>
    <string name="_19_25">19:25</string>
    <string name="_20_15">20:15</string>
    <string name="_20_25">20:25</string>
    <string name="_21_15">21:15</string>
    <string name="_21_25">21:25</string>
    <string name="go_home">GO HOME</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="set_work">Set Work</string>
    <string name="go_to_work">GO TO WORK</string>
    <string name="start">Start</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="end">End</string>
    <string name="st">Start</string>
    <string name="en">End</string>
    <string name="veruda_ulica_pula">Veruda ulica Pula</string>
    <string name="rovinjska_14_pula">Rovinjska 14 Pula</string>
    <string name="where_are_you_coming_from">Where are you coming from?</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="_0_min">0 min</string>
    <string name="_0_km">0 km</string>
    <string name="clock">clock</string>
    <string name="distance">distance</string>
    <string name="find_path">Find path</string>
    <string name="location">location</string>
</resources>