<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Boat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#4083A9"
        android:id="@+id/relLayout11">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:layout_marginStart="20dp"
            android:text="@string/boat_lines"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/text_v1"
            >

        </TextView>


    </RelativeLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="55dp"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment" >

    </fragment>






        <ScrollView
            android:background="#4083A9"
            android:layout_below="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:background="#4083A9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_border"
            android:id="@+id/Pu_Zd">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="#81817A"
                android:text="@string/pula_zadar"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center">

            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#7E7D7D"
                android:layout_marginTop="43dp">

            </View>
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:textColor="#81817A"
                android:text="@string/katamaran"
                android:layout_marginStart="50dp">

            </TextView>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="250dp"
                android:textColor="#81817A"
                android:text="@string/_07_00">

            </TextView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/white_border"
            android:id="@+id/Pu_brij">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="#81817A"
                android:text="@string/pula_brijuni"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center">

            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#7E7D7D"
                android:layout_marginTop="43dp">

            </View>
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:textColor="#81817A"
                android:text="@string/korkyra"
                android:layout_marginStart="50dp">

            </TextView>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="250dp"
                android:textColor="#81817A"
                android:text="@string/_12_00">

            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="210dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/white_border"
            android:id="@+id/pu_fra">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="#81817A"
                android:text="@string/pula_fratarski"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center">

            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#7E7D7D"
                android:layout_marginTop="43dp">

            </View>
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:textColor="#81817A"
                android:text="@string/odisej"
                android:layout_marginStart="50dp">

            </TextView>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="250dp"
                android:textColor="#81817A"
                android:text="@string/_09_00">

            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="310dp"
            android:layout_marginRight="30dp"

            android:background="@drawable/white_border"
            android:id="@+id/pu_ve">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="#81817A"
                android:text="@string/pula_venecija"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center">

            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#7E7D7D"
                android:layout_marginTop="43dp">

            </View>
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:textColor="#81817A"
                android:text="@string/katamaran"
                android:layout_marginStart="50dp">

            </TextView>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="250dp"
                android:textColor="#81817A"
                android:text="@string/_07_30">

            </TextView>
        </RelativeLayout>

            </RelativeLayout>

        </ScrollView>




</RelativeLayout>