<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#27AE60"
    tools:context=".Kol_stoja">

    <RelativeLayout
        android:id="@+id/rel_bus_stoja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/stoja_bus_station"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/rel_bus_stoja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Dir_A"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:background="@drawable/white_border"
            android:text="@string/direction_a_btn1"
            android:textColor="#27AE60">

        </Button>

        <Button
            android:id="@+id/Dir_B"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="35dp"
            android:layout_toEndOf="@id/Dir_A"
            android:background="@drawable/green_border"
            android:text="@string/direction_a"
            android:textColor="@color/white">

        </Button>

    </RelativeLayout>

</RelativeLayout>